--- a/app/src/main/res/layout/fragment_form_add_event.xml
+++ b/app/src/main/res/layout/fragment_form_add_event.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.create_post.CreatePostActivity">
+    tools:context=".view.create_event.form.FormAddEventFragment"
+>
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvCreatePost"
@@ -64,15 +69,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="32dp"
-        android:alpha="0"
+        android:alpha="100"
         app:boxCornerRadiusBottomEnd="12dp"
         app:boxCornerRadiusBottomStart="12dp"
         app:boxCornerRadiusTopEnd="12dp"
         app:boxCornerRadiusTopStart="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tvEventName"
-        app:layout_constraintTop_toBottomOf="@+id/tvEventName"
-        tools:alpha="100">
+        app:layout_constraintTop_toBottomOf="@+id/tvEventName">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/eventNameEditText"
@@ -143,15 +147,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="32dp"
-        android:alpha="0"
+        android:alpha="100"
         app:boxCornerRadiusBottomEnd="12dp"
         app:boxCornerRadiusBottomStart="12dp"
         app:boxCornerRadiusTopEnd="12dp"
         app:boxCornerRadiusTopStart="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tvDescription"
-        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
-        tools:alpha="100">
+        app:layout_constraintTop_toBottomOf="@+id/tvDescription">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/eventDescriptionEditText"
@@ -355,7 +358,7 @@
         android:layout_height="wrap_content"
         android:text="@string/event_origin_link_example"
         android:textColor="@color/grey_15"
-        android:alpha="0.7"
+        android:alpha="100"
         android:layout_marginStart="12dp"
         app:layout_constraintStart_toEndOf="@id/tvOriginLink"
         app:layout_constraintTop_toTopOf="@+id/tvOriginLink"
@@ -393,6 +396,7 @@
         android:id="@+id/btnPost"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="48dp"
@@ -407,3 +411,5 @@
         app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
